--- a/Chalkable.Web/assets/jade/controls/glance-box.jade
+++ b/Chalkable.Web/assets/jade/controls/glance-box.jade
@@ -1,6 +1,4 @@
-mixin GlanceBox(controller, action, data, color, total, summary, converter)
-    totalMethod = total ? 'get' + total.capitalize() : 'getTotal';
-    summaryMethod = summary ? 'get' + summary.capitalize() : 'getSummary';
+mixin GlanceBox(controller, action, data, color, converter)
     if controller
         +ActionLink(controller, action).glance-box.hover-action-box
     else
@@ -11,9 +9,9 @@ mixin GlanceBox(controller, action, data, color, total, summary, converter)
                 if data.items
                     .details
                         each item, i in data.items
-                            summary = item[summaryMethod]();
+                            summary = (item.getSummaryMethod || item.data.getSummary)();
                             summary = converter ? converter(summary) : summary;
-                            div #{self.getShortText(item[totalMethod](), summary)}
+                            div #{self.getShortText((item.getTotalMethod || item.data.getTotal)(), summary)}
 
 
 
