--- a/Chalkable.Web/assets/jade/activities/class/ClassSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassSummary.jade
@@ -36,11 +36,11 @@ mixin IfBlock_(items, i, index)
                     | - #{self.getRoom() && self.getRoom().getDescription()}
                 .glance-container
                     if(self.getClassAverageBox())
-                        +GlanceBox(null, null, {value: self.getClassAverageBox().getTitle(), title: Msg.Class_average, items: self.getClassAverageBox().getHover()})
+                        +GlanceBox(null, null, self.buildCommonGlanceBoxData(self.getClassAverageBox(), Msg.Class_average))
                     if(self.getClassAttendanceBox())
-                        +GlanceBox(null, null, {value: self.getClassAttendanceBox().getTitle(), title: Msg.Attendance_count, items: self.getClassAttendanceBox().getHover()})
+                        +GlanceBox(null, null, self.buildCommonGlanceBoxData(self.getClassAttendanceBox(), Msg.Attendance_count))
                     if(self.getClassDisciplineBox())
-                        +GlanceBox(null, null, {value: self.getClassDisciplineBox().getTitle(), title: Msg.Discipline_count, items: self.getClassDisciplineBox().getHover()}, null, 'count', 'disciplineName')
+                        +GlanceBox(null, null, self.buildDisciplineGlanceBoxData(), null)
                     if(self.getClassSize())
                         +GlanceBox(null, null, {value: self.getClassSize(), title: Msg.Class_size}, 'brown')
         .today-work-panelf
