--- a/Chalkable.Web/assets/jade/activities/student/StudentProfileAttendanceView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/StudentProfileAttendanceView.jade
@@ -13,6 +13,8 @@ mixin AttendanceSection(data)
 
 summaryInfo = self.getSummaryInfo()
 personId = summaryInfo.getId()
+actions = {currentAction: 'attendanceMonth'}
+calendar = self.getAttendanceCalendar()
 .student-attendance-view
     .loader-container
         .loader
@@ -24,8 +26,8 @@ personId = summaryInfo.getId()
                     +ActionLink('students', 'info', personId) Info
                     +ActionLink('students', 'schedule', personId) Scheduling
                     +ActionLink('students', 'attendance', personId).pressed Attendance
+                    +ActionLink('students', 'discipline', personId) Discipline
                     +ActionLink('students', 'details', personId) Apps
-
         .attendance-view
             .summary-info
                 .avarar-container
@@ -37,33 +39,5 @@ personId = summaryInfo.getId()
                 .attendance-info
                     +AttendanceSection(self)
             .calendar-info
+                +Calendar(calendar, chlk.templates.calendar.attendance.StudentAttendanceCalendarBodyTpl, calendar, 'students', actions, null).student-attendance-calendar
 
-
-//        #top-summary-panel
-//            #avatar-photo-conainer
-//                .img-container
-//                    +PersonImg(self, 256)
-//                    .grades-container
-//                        p=Msg.Class_Of
-//                            span=classOf
-//                        .grade #{self.getSerial(gradeLevel)} #{Msg.Grade}
-//            #student-info-panel
-//                h1.display-name=self.getDisplayName() || self.getFullName()
-//                .status
-//                    div(class=status, data-tooltip=statusName)
-//                    |#{self.getCurrentClassName()}
-//                    if(!self.getCurrentClassName() || self.getCurrentClassName().toLowerCase() != 'no class now')
-//                        |&nbsp;- #{self.getRoomName()}
-//                .glance-container
-//                    +GlanceBox(null, null, {value: null, title: Msg.Percentile})
-//                    +GlanceBox(null, null, {value: self.getAttendanceBox().getTitle(), title: Msg.Attendance, items: self.getAttendanceBox().getHover()}, null, 'attendanceCount', 'type', chlk.converters.attendance.AttendanceTypeToNameConverter.prototype.convert)
-//                    +GlanceBox(null, null, {value: self.getDisciplineBox().getTitle(), title: Msg.Discipline, items: self.getDisciplineBox().getHover()}, null, 'attendanceCount', 'type', chlk.converters.attendance.AttendanceTypeToNameConverter.prototype.convert)
-//                    +GlanceBox(null, null, {value: null, title: Msg.Recent})
-//                    .today-work-panel
-//                    h2=Msg.Todays_work
-//                    .period-toolbar
-//                    +LeftRightToolbar(self.getPeriodSection(), chlk.templates.announcement.AnnouncementClassPeriod)(hideArrows).centered
-//        .today-work-panel
-//            h2.stats=Msg.Classes
-//            .classes-tb
-//                +LeftRightToolbar(self.getClassesSection(), chlk.templates.classes.Class).centered
