--- a/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
@@ -1,17 +1,7 @@
-announcementAppId = self.app.getAnnouncementApplicationId() ? self.app.getAnnouncementApplicationId().valueOf() : ""
-announcementId = self.app.getAnnouncementId() ? self.app.getAnnouncementId().valueOf() : ""
+
 .app-wrapper
     .x-window-header
-        .toolbar
-            each btn in self.toolbarButtons
-                btnTarget = btn.isTargetBlank() ? "_blank" : undefined
-                url = btn.getUrl() ? btn.getUrl() : "javascript:void(0)"
-                a(id=btn.getId(),
-                target = btnTarget,
-                href = url,
-                data-announcement-app-id=announcementAppId,
-                data-announcement-id=announcementId)=btn.getTitle()
-        .x-close-btn.close
+        +RenderWith(self.getModel(), chlk.templates.apps.AppWrapperDialogToolbarTpl)
     .iframe-wrap
         iframe(src=self.app.getCurrentModeUrl())
 
