--- a/Chalkable.Web/assets/jade/activities/calendar/attendance/StudentAttendanceMonthCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/attendance/StudentAttendanceMonthCalendarBody.jade
@@ -24,7 +24,7 @@
                         if !item.isExcused() && !item.isAbsent()
                             if !item.isShowGroupedData()
                                 each att in item.getAttendances()
-                                    li=att.getCount() + " " + att.getAttendanceType()
+                                    li=att.getCount() + " " + att.getAttendanceTypeName()
                             else
                                 each att in item.getAttendances()
                                     li=att.getClassName()
