--- a/Chalkable.Web/assets/jade/activities/calendar/discipline/StudentDisciplineMonthCalendar.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/discipline/StudentDisciplineMonthCalendar.jade
@@ -1,3 +1,4 @@
 actions = {currentAction: 'disciplineMonth'}
+params = [self.getMinDate().format('mm-dd-yy'), self.getMaxDate().format('mm-dd-yy'), self.getStudentId()]
 div
-    +Calendar(self, chlk.templates.calendar.discipline.StudentDisciplineCalendarBodyTpl, self.getModel(), 'students', actions, null).student-discipline-calendar
+    +Calendar(self, chlk.templates.calendar.discipline.StudentDisciplineCalendarBodyTpl, self.getModel(), 'students', actions, params).student-discipline-calendar
