--- a/Chalkable.Web/assets/jade/activities/calendar/discipline/StudentDisciplineMonthCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/discipline/StudentDisciplineMonthCalendarBody.jade
@@ -27,5 +27,5 @@
                             li=item.getMoreCount() + "More"
                         else
                             each discType in item.getDisciplineTypes()
-                                li=discType.getName() + " " + discType.getPeriodOrder()
+                                li=discType.getName() + ", " + discType.getPeriodName()
 
