styled student profile attendance tab and discipline tab

--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -6,7 +6,8 @@
 @import "partials/main/_buttons";
 @import "partials/main/_checkboxes";
 @import "partials/main/_images";
-@import "partials/main/_profile";
+@import "partials/main/profile/_profile";
+@import "partials/main/profile/_profile_calendar";
 @import "partials/main/_setup";
 @import "partials/main/_admin";
 
