--- a/Chalkable.Web/assets/jade/activities/student/StudentProfileAttendanceView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/StudentProfileAttendanceView.jade
@@ -14,7 +14,7 @@ summaryInfo = self.getSummaryInfo()
 personId = summaryInfo.getId()
 actions = {currentAction: 'attendanceMonth'}
 calendar = self.getAttendanceCalendar()
-.student-attendance-view
+.profile-calendar.student-attendance-view
     .loader-container
         .loader
         .action-bar.not-transparent.buttons
@@ -27,15 +27,16 @@ calendar = self.getAttendanceCalendar()
                     +ActionLink('students', 'attendance', null, personId).pressed Attendance
                     +ActionLink('students', 'discipline', null, personId) Discipline
                     +ActionLink('students', 'details', personId) Apps
-        .attendance-view
+        .profile-info.attendance-view
             .summary-info
-                .avarar-container
-                    .img-container
-                        +PersonImg(summaryInfo, 64)
-                h1.profile-person-name=summaryInfo.getDisplayName()
-                h2.mp-conteiner
+                .person-info
+                    .avarar-container
+                        .img-container
+                            +PersonImg(summaryInfo, 64)
+                    h1.profile-person-name=summaryInfo.getDisplayName()
+                h2.mp-conteiner.profile-drop-down-container
                     +MarkingPeriodSelect(self.getMarkingPeriods(), personId, summaryInfo.getMarkingPeriod())
-                .attendance-info
+                .glance-section.attendance-info
                     +AttendanceSection(self)
             #attendance-calendar-info.calendar-info
                 +RenderWith(self.getAttendanceCalendar(), chlk.templates.calendar.attendance.StudentAttendanceMonthCalendarTpl)
