--- a/Chalkable.Web/assets/jade/activities/student/StudentProfileDisciplineView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/StudentProfileDisciplineView.jade
@@ -15,7 +15,7 @@ mixin DisciplineSection(data)
 
 summaryInfo = self.getSummaryInfo()
 personId = summaryInfo.getId()
-.student-discipline-view
+.profile-calendar.student-discipline-view
     .loader-container
         .loader
         .action-bar.not-transparent.buttons
@@ -28,16 +28,17 @@ personId = summaryInfo.getId()
                     +ActionLink('students', 'attendance', null, personId) Attendance
                     +ActionLink('students', 'discipline', null, personId).pressed Discipline
                     +ActionLink('students', 'details', personId) Apps
-        .discipline-view
+        .profile-info.discipline-view
             .summary-info
-                .avarar-container
-                    .img-container
-                        +PersonImg(summaryInfo, 64)
-                h1.profile-person-name=summaryInfo.getDisplayName()
-                lable=summaryInfo.getSummary()
-                h2.mp-conteiner
+                .person-info
+                    .avarar-container
+                        .img-container
+                            +PersonImg(summaryInfo, 64)
+                    h1.profile-person-name=summaryInfo.getDisplayName()
+                    lable=summaryInfo.getSummary()
+                h2.mp-conteiner.profile-drop-down-container
                     +MarkingPeriodSelect(self.getMarkingPeriods(), personId, summaryInfo.getMarkingPeriod())
-                .discipline-info
+                .glance-section.discipline-info
                     +DisciplineSection(self)
             #discipline-calendar-info.calendar-section
                 +RenderWith(self.getDisciplineCalendar(), chlk.templates.calendar.discipline.StudentDisciplineMonthCalendarTpl)
