fixed in month calendar

--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthPage.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthPage.jade
@@ -10,5 +10,5 @@ div
         selectedIds=obj.selectedIds
         multiple=obj.multiple
     ).classes-bar
-    +Calendar(self, chlk.templates.calendar.announcement.MonthCalendarBodyTpl, self.getModel(), 'calendar', actions, params)
+    +Calendar(self, chlk.templates.calendar.announcement.MonthCalendarBodyTpl, self.getModel(), 'calendar', actions, [params])
 
