Fixed class image mixin

--- a/Chalkable.Web/assets/jade/controls/image.jade
+++ b/Chalkable.Web/assets/jade/controls/image.jade
@@ -12,16 +12,8 @@ mixin PersonImg(person, size)
 
 mixin ClassImg(course, width, height)
     -defaultSrc =joinUrls(window.scriptsRoot, 'Content/images/common/course-icons/all.png');
-    if course
-        srcId = course.getDepartmentId();
-        alternativeSrcId = course.getId();
-        -if(!srcId){srcId = alternativeSrcId; alternativeSrcId = null};
-        src = chlk.templates.JadeTemplate.prototype.getPictureURL(srcId, height, width);
-        alternativeSrc = null;
-        -if(alternativeSrcId){alternativeSrc = chlk.templates.JadeTemplate.prototype.getPictureURL(alternativeSrcId, height, width)};
-        -attributes.src = src;
-        -attributes.alternativeSrc = alternativeSrc;
-        -attributes.defaultSrc = defaultSrc;
+    if course && course.getDepartmentId()
+        -attributes.src = chlk.templates.JadeTemplate.prototype.getPictureURL(course.getDepartmentId(), height, width)
     else
         -attributes.src = defaultSrc;
     +Image()(attributes)
