--- a/Chalkable.Web/assets/jade/activities/attendance/AdminStudentBox.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminStudentBox.jade
@@ -1,4 +1,6 @@
-div(index=0, data-id=self.getId().valueOf()).student
-    +ActionLink('attendance', 'showStudentAttendance', self.getId(), self.getDate() ? self.getDate().format('mm/dd/yy') : null).img-container
-        +PersonImg(student, 128)
-    +ActionLink('students', 'details', self.getId()).name=self.getName()
+date = self.getDate() ? self.getDate().format('mm/dd/yy') : null
+div(index=0, data-id=self.getStudent().getId().valueOf(), style="top:" + self.getTop() + 'px').student.absolute
+    +ActionLink('attendance', 'showStudentAttendance', self.getStudent().getId(), date,
+            'attendance', 'summary', JSON.stringify([true, self.getGradeLevelsIds(), self.getCurrentPage(), date])).img-container
+        +PersonImg(self.getStudent(), 128)
+    +ActionLink('students', 'details',self.getStudent().getId()).name=self.getStudent().getDisplayName()
